assets/dash.css
/* ... */
@media (max-width: 735px) {
  #merchant-kit-what-sets-dash-apart h3 {
    text-align: left;
  }
}

@media (max-width: 575px) {
  #merchant-kit-why-dash-2 .card-deck .card {
    margin-left: 0;
    margin-right: 0;
    background: #f8f9fa !important;
    padding-top: 30px;
  }

  #merchant-kit-what-sets-dash-apart .cta-content ul {
    columns: 1;
    column-gap: 0;
    padding-left: 0;
  }
}

@media (max-width: 560px) {
  #merchant-kit-why-crypto .container {
    padding-left: 30px;
    padding-right: 30px;
  }

  #merchant-kit-exchange .richtext,
  #merchant-kit-pos-3 .richtext,
  #merchant-kit-wallet .richtext,
  #merchant-kit-glossary .richtext {
    padding: 30px 40px;
    margin: 0 15px;
  }

  #merchant-kit-exchange-content-2 .col-lg-6 {
    padding-left: 30px;
    padding-right: 30px;
  }

  #merchant-kit-why-crypto .container {
    display: block;
  }
}

@media (max-width: 465px) {
  #merchant-kit-why-crypto h4 {
    line-height: 2;
  }

  #merchant-kit-what-sets-dash-apart .cta-content {
    padding-left: 40px;
    margin: 0 30px 0 0;
  }

  #merchant-page .banner-short h1::after {
    content: none;
    height: 0;
    top: 0;
  }

  #merchant-kit-exchange .richtext,
  #merchant-kit-pos-3 .richtext,
  #merchant-kit-wallet .richtext,
  #merchant-kit-glossary .richtext {
    padding: 20px;
    padding-top: 5px;
  }

  #merchant-kit-dashdirect .cta-background-image .cta-wrap,
  #merchant-kit-intro .cta-background-image .cta-wrap,
  #merchant-kit-why-crypto-image .cta-wrap,
  #merchant-kit-form-cta .cta-background-image .cta-wrap {
    position: relative;
  }

  #merchant-kit-dashdirect h3::before {
    content: none;
    width: 0;
    height: 0;
  }

  #merchant-kit-dashdirect .cta-content {
    padding: 0px;
    padding-top: 45px;
  }

  #merchant-kit-exchange .richtext,
  #merchant-kit-pos-3 .richtext,
  #merchant-kit-wallet .richtext,
  #merchant-kit-glossary .richtext {
    margin: 0;
  }

  #merchant-kit-gifts-stickers .container-xs,
  #merchant-kit-gifts-coin .container-xs {
    padding-left: 0;
    padding-right: 0;
  }

  #merchant-kit-thankyou .cta-background-image .cta-content,
  #merchant-kit-why-crypto-image .cta-content {
    text-align: center;
  }

  #merchant-kit-exchange-content-2 .grid-item-container .col-6 {
    flex: 0 0 50%;
  }

  #merchant-kit-intro .cta-background-image {
    min-height: 400px;
    padding-top: 40px;
  }

  #merchant-kit-intro .cta-content {
    padding-top: 20px;
    padding-bottom: 40px;
  }

  .text-section-header-wrap {
    text-align: left;
    padding: 0;
  }

  #merchant-kit-exchange-content-2 .order-lg-2 {
    padding-left: 0;
    padding-right: 0;
  }

  #merchant-kit-exchange-content-2 .grid-item-container {
    padding-left: 5px;
    padding-right: 5px;
  }

  #merchant-kit-why-crypto-image .cta-background-image .cta-content {
    margin: 0;
  }

  #merchant-kit-why-crypto-image .cta-content,
  #merchant-kit-dashdirect .cta-content,
  #merchant-kit-form-cta .cta-content {
    padding: 65px 0px;
  }

  #merchant-kit-exchange-content-2 .grid-item .image {
    height: 95px;
  }

  #merchant-kit-exchange-content-2 .grid-item-container {
    top: 10px;
    padding: 0;
  }

  #merchant-kit-exchange-content-2 .col-right {
    padding-top: 30px;
  }
}

@media (max-width: 420px) {
  #navbar-main .navbar-item .dropdown .link a {
    width: 150px;
  }
}

